fix: foreground color in dark mode

--- a/examples/seekable-player/src/style.css
+++ b/examples/seekable-player/src/style.css
@@ -5,7 +5,7 @@
     --color-bg: #002b36;
     --color-bg-alt: #073642;
     --color-border: #586e75;
-    --color-fg: #dc322f;
+    --color-fg: #839496;
     --color-muted: #93a1a1;
     --color-strong: #eee8d5;
     --color-accent: #dc322f;
